# orderbook-replay-lab

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: gen.rs  replay.rs  simulate.rs
codec/: Cargo.toml
codec/benches/: codec_bench.rs
codec/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
docs/: engine_architecture.md  oms.md  perf-methodology.md  risk.md  strategy_api.md  venue.md
docs/perf/: codec-bench-2026-02-28.md  phase-a-symbolid-bench.md
engine/: Cargo.toml
engine/src/: lib.rs
metrics/: Cargo.toml
metrics/src/: lib.rs
oms/: Cargo.toml
oms/src/: lib.rs
orderbook/: Cargo.toml
orderbook/benches/: orderbook_bench.rs
orderbook/src/: lib.rs
portfolio/: Cargo.toml
portfolio/src/: lib.rs
replay/: Cargo.toml
replay/src/: lib.rs
risk/: Cargo.toml
risk/src/: lib.rs
strategies/: Cargo.toml
strategies/src/: lib.rs
strategy-api/: Cargo.toml
strategy-api/src/: lib.rs
trading-types/: Cargo.toml
trading-types/src/: lib.rs
venue/: Cargo.toml
venue-sim/: Cargo.toml
venue-sim/src/: lib.rs
venue/src/: lib.rs
