[workspace]
resolver = "2"
members = [
    "core",
    "codec",
    "orderbook",
    "replay",
    "metrics",
    "cli",
    "trading-types",
]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.8"
thiserror = "1.0"
hdrhistogram = "7.5"
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"
criterion = "0.5"
bincode = "1.3"
memmap2 = "0.9"
