[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "orderbook-replay-lab-rs"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
codec = { path = "../codec" }
lob_core = { package = "lob-core", path = "../core" }
metrics = { path = "../metrics" }
orderbook = { path = "../orderbook" }
replay = { path = "../replay" }
engine = { path = "../engine" }
oms = { path = "../oms" }
portfolio = { path = "../portfolio" }
risk = { path = "../risk" }
strategies = { path = "../strategies" }
strategy-api = { path = "../strategy-api" }
venue-sim = { path = "../venue-sim" }
venue = { path = "../venue" }
trading-types = { path = "../trading-types" }

[features]
bin = ["codec/bin", "replay/bin"]

[dev-dependencies]
tempfile = { workspace = true }
