[package]
name = "codec"
version = "0.1.0"
edition = "2021"

[dependencies]
lob_core = { package = "lob-core", path = "../core" }
serde_json = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, optional = true }
bincode = { workspace = true, optional = true }
crc32fast = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }

[features]
bin = ["bincode", "serde", "crc32fast"]

[[bench]]
name = "codec_bench"
harness = false
